# java-jni-barcode-qrcode-reader

./: .gitignore  README.md  Test.java  pom.xml
examples/9.x/command_line/: Dockerfile  README.md  pom.xml
examples/9.x/command_line/src/main/java/com/dynamsoft/: App.java
examples/9.x/dotcode/: README.md
examples/9.x/dotcode/command-line/: pom.xml
examples/9.x/dotcode/command-line/src/main/java/com/java/barcode/: App.java
examples/9.x/dotcode/opencv/: pom.xml
examples/9.x/dotcode/opencv/src/main/java/com/java/barcode/: App.java  BarcodeCallback.java  BarcodeRunnable.java  CustomJLable.java  Utils.java
examples/9.x/gradle_kotlin/: README.md
examples/9.x/gradle_kotlin/java/: settings.gradle
examples/9.x/gradle_kotlin/java/app/: build.gradle
examples/9.x/gradle_kotlin/java/app/src/main/java/dynamsoft/barcode/reader/: App.java
examples/9.x/gradle_kotlin/java/app/src/test/java/java/barcode/reader/: AppTest.java
examples/9.x/gradle_kotlin/kotlin/: settings.gradle
examples/9.x/gradle_kotlin/kotlin/app/: build.gradle
examples/9.x/gradle_kotlin/kotlin/app/src/main/kotlin/dynamsoft/barcode/reader/: App.kt
examples/9.x/gradle_kotlin/kotlin/app/src/test/kotlin/dynamsoft/barcode/reader/: AppTest.kt
examples/9.x/zxing_dynamsoft/: README.md
examples/9.x/zxing_dynamsoft/command-line/: README.md  pom.xml
examples/9.x/zxing_dynamsoft/command-line/src/main/java/com/java/barcode/: App.java
examples/9.x/zxing_dynamsoft/command-line/src/test/java/com/java/barcode/: AppTest.java
examples/9.x/zxing_dynamsoft/gui/: README.md
examples/9.x/zxing_dynamsoft/gui/src/main/java/com/java/barcode/: App.java
examples/9.x/zxing_dynamsoft/web/: README.md  pom.xml
examples/9.x/zxing_dynamsoft/web/src/main/java/com/java/barcode/: App.java  BarcodeController.java  BarcodeResponse.java  DynamsoftBarcode.java  HelloController.java  ZXingBarcode.java
examples/barcode-scanner/: CMakeLists.txt  README.md  build-jar.ps1  build-jar.sh  run-litecam.bat  run-litecam.ps1  run-litecam.sh
examples/barcode-scanner/cmake/: CameraProjectConfig.cmake.in
examples/barcode-scanner/include/: Camera.h
examples/barcode-scanner/java-src/com/example/litecam/: LiteCam.java  LiteCamViewer.java
examples/barcode-scanner/maven-example/: build.ps1  build.sh  pom.xml  run.ps1  run.sh
examples/barcode-scanner/maven-example/src/main/java/com/example/litecam/: BarcodeScanner.java
examples/barcode-scanner/src/: CameraWindows.cpp  LiteCamJNI.cpp  main.cpp
jni/: BarcodeReaderConfig.h.in  CMakeLists.txt  NativeBarcodeReader.cxx  NativeBarcodeReader.h
src/main/java/com/dynamsoft/barcode/: NativeBarcodeReader.java  NativeLoader.java  Test.java  Utils.java
